--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@fortawesome/react-fontawesome": "^0.1.18",
         "basic-auth": "^2.0.1",
         "ejs": "^3.1.7",
+        "engine.io": "^6.4.2",
         "express": "^4.18.2",
         "express-static": "^1.2.6",
         "mime-types": "^2.1.35",
